--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
-    <header>
+    <header class="container">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
               <a class="navbar-brand" href="#">
@@ -30,13 +30,102 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">Subscribe</a>
                   </li>
-
-
                 </ul>
               </div>
             </div>
           </nav>
+          <!-- slider start -->
+          <section class="mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active border rounded bg-info p-5">
+                   <div class="row">
+                    <div class="col-lg-7 d-flex align-items-center ps-5">
+                       <div>
+                        <h2>Cool Dude Headphne</h2>
+                        <p>This is the best headphone in the world for the people who just want to waste time </p>
+                        <h1>$420</h1>
+                        <div class="btn btn-warning">Buy Now</div>
+                       </div> 
+                    </div>
+                    <div class="col-lg-5">
+                        <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                    </div>
+                   </div>
+                  </div>
+                  <div class="carousel-item active border rounded bg-info p-5">
+                   <div class="row">
+                    <div class="col-lg-7 d-flex align-items-center ps-5">
+                       <div>
+                        <h2>MEGA LCD TV FOR HOME</h2>
+                        <p>This is the best headphone in the world for the people who just want to waste time </p>
+                        <h1>$1200</h1>
+                        <div class="btn btn-warning">Buy Now</div>
+                       </div> 
+                    </div>
+                    <div class="col-lg-5">
+                        <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+                    </div>
+                   </div>
+                  </div>
+                  <div class="carousel-item active border rounded bg-info p-5">
+                   <div class="row">
+                    <div class="col-lg-7 d-flex align-items-center ps-5">
+                       <div>
+                        <h2>X-BOX for your living Room</h2>
+                        <p>This is the best headphone in the world for the people who just want to waste time </p>
+                        <h1>$600</h1>
+                        <div class="btn btn-warning">Buy Now</div>
+                       </div> 
+                    </div>
+                    <div class="col-lg-5">
+                        <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                    </div>
+                   </div>
+                  </div>
+                 
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+          </section>
+          <!-- slider ends -->
     </header>
+    <main>
+        <!-- categories starts -->
+        <div class="container text-center my-5">
+            <div class="row g-2">
+                <!-- single items category -->
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="p-3 border bg-warning  rounded-2 d-flex         align-items-center justify-content-around">
+                    <h1 class="text-white">Watch</h1>
+                    <img src="./images/categories/watch.png" alt="">
+                </div>
+              </div>
+                <!-- single items category -->
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="p-3 border bg-success  rounded-2 d-flex         align-items-center justify-content-around">
+                    <h1 class="text-white">bag</h1>
+                    <img src="./images/categories/watch.png" alt="">
+                </div>
+              </div>
+                <!-- single items category -->
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="p-3 border bg-primary  rounded-2 d-flex         align-items-center justify-content-around">
+                    <h1 class="text-white">shoes</h1>
+                    <img src="./images/categories/watch.png" alt="">
+                </div>
+              </div>
+            </div>
+        </div>
+        <!-- categories ends -->
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
