--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
         <!-- categories ends -->
         <!-- shoes setion starts  -->
-        <section class="container">
+        <section class="container my-5">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -134,6 +134,7 @@
                     <img src="/images/shoes/shoe-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Supply 350</h5>
+                      <h2>$160</h2>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="m-3">
@@ -146,6 +147,7 @@
                     <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Nike 360</h5>
+                      <h2>$160</h2>
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="m-3">
@@ -158,6 +160,7 @@
                     <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Red Airmax</h5>
+                      <h2>$160</h2>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
                     <div class="m-3">
@@ -169,6 +172,53 @@
 
         </section>
         <!-- shoes setion ends  -->
+        <!-- backpack sectio starts  -->
+        <section class="container my-5">
+            <h2>Backpack</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100">
+                    <img src="/images/bags/bag-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title"> Red Bag</h5>
+                      <h2>$160</h2>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="m-3">
+                      <div class="btn btn-warning">Buy Now</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100">
+                    <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Blue bag</h5>
+                      <h2>$160</h2>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="m-3">
+                        <div class="btn btn-warning">Buy Now</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card border border-0 shadow-lg h-100">
+                    <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Black bag</h5>
+                      <h2>$160</h2>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    </div>
+                    <div class="m-3">
+                        <div class="btn btn-warning">Buy Now</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+        </section>
+        <!-- backpack sectio ends  -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
