--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>panda commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- custom css  -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="./images/logo.png " alt=" ">
@@ -22,13 +24,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
@@ -38,14 +40,14 @@
           <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item active border rounded bg-info p-5">
+                  <div class="carousel-item active border rounded panda-bg-info p-5">
                    <div class="row">
                     <div class="col-lg-7 d-flex align-items-center ps-5">
                        <div>
                         <h2>Cool Dude Headphne</h2>
                         <p>This is the best headphone in the world for the people who just want to waste time </p>
                         <h1>$420</h1>
-                        <div class="btn btn-warning">Buy Now</div>
+                        <div class="btn panda-btn-buy-now">Buy Now</div>
                        </div> 
                     </div>
                     <div class="col-lg-5">
@@ -53,14 +55,14 @@
                     </div>
                    </div>
                   </div>
-                  <div class="carousel-item active border rounded bg-info p-5">
+                  <div class="carousel-item active border rounded panda-bg-info p-5">
                    <div class="row">
                     <div class="col-lg-7 d-flex align-items-center ps-5">
                        <div>
                         <h2>MEGA LCD TV FOR HOME</h2>
                         <p>This is the best headphone in the world for the people who just want to waste time </p>
                         <h1>$1200</h1>
-                        <div class="btn btn-warning">Buy Now</div>
+                        <div class="btn panda-btn-buy-now">Buy Now</div>
                        </div> 
                     </div>
                     <div class="col-lg-5">
@@ -68,14 +70,14 @@
                     </div>
                    </div>
                   </div>
-                  <div class="carousel-item active border rounded bg-info p-5">
+                  <div class="carousel-item active border rounded panda-bg-info p-5">
                    <div class="row">
                     <div class="col-lg-7 d-flex align-items-center ps-5">
                        <div>
                         <h2>X-BOX for your living Room</h2>
                         <p>This is the best headphone in the world for the people who just want to waste time </p>
                         <h1>$600</h1>
-                        <div class="btn btn-warning">Buy Now</div>
+                        <div class="btn panda-btn-buy-now">Buy Now</div>
                        </div> 
                     </div>
                     <div class="col-lg-5">
@@ -100,7 +102,7 @@
     <main>
         <!-- categories starts -->
         <div class="container text-center my-5">
-            <div class="row g-2">
+            <div class="row g-4 categories">
                 <!-- single items category -->
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="p-3 border bg-warning  rounded-2 d-flex         align-items-center justify-content-around">
@@ -112,21 +114,21 @@
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="p-3 border bg-success  rounded-2 d-flex         align-items-center justify-content-around">
                     <h1 class="text-white">bag</h1>
-                    <img src="./images/categories/watch.png" alt="">
+                    <img src="./images/categories/bag.png" alt="">
                 </div>
               </div>
                 <!-- single items category -->
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="p-3 border bg-primary  rounded-2 d-flex         align-items-center justify-content-around">
                     <h1 class="text-white">shoes</h1>
-                    <img src="./images/categories/watch.png" alt="">
+                    <img src="./images/categories/shoes.png" alt="">
                 </div>
               </div>
             </div>
         </div>
         <!-- categories ends -->
         <!-- shoes setion starts  -->
-        <section class="container my-5">
+        <section class="container my-5" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -138,7 +140,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="m-3">
-                      <div class="btn btn-warning">Buy Now</div>
+                      <div class="btn panda-btn-buy-now">Buy Now</div>
                     </div>
                   </div>
                 </div>
@@ -151,7 +153,7 @@
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="m-3">
-                        <div class="btn btn-warning">Buy Now</div>
+                        <div class="btn panda-btn-buy-now">Buy Now</div>
                     </div>
                   </div>
                 </div>
@@ -164,7 +166,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
                     <div class="m-3">
-                        <div class="btn btn-warning">Buy Now</div>
+                        <div class="btn panda-btn-buy-now">Buy Now</div>
                     </div>
                   </div>
                 </div>
@@ -173,7 +175,7 @@
         </section>
         <!-- shoes setion ends  -->
         <!-- backpack sectio starts  -->
-        <section class="container my-5">
+        <section class="container my-5" id="backpack">
             <h2>Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -185,7 +187,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="m-3">
-                      <div class="btn btn-warning">Buy Now</div>
+                      <div class="btn panda-btn-buy-now">Buy Now</div>
                     </div>
                   </div>
                 </div>
@@ -198,7 +200,7 @@
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="m-3">
-                        <div class="btn btn-warning">Buy Now</div>
+                        <div class="btn panda-btn-buy-now">Buy Now</div>
                     </div>
                   </div>
                 </div>
@@ -211,7 +213,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
                     <div class="m-3">
-                        <div class="btn btn-warning">Buy Now</div>
+                        <div class="btn panda-btn-buy-now">Buy Now</div>
                     </div>
                   </div>
                 </div>
@@ -219,7 +221,24 @@
 
         </section>
         <!-- backpack sectio ends  -->
+        <!-- subscribe section starts  -->
+        <section style="height: 300px ;" class="container rounded-3 d-flex justify-content-center   align-items-center panda-bg-info " id="subscribe">
+          <div>
+            <h2>LET'S STAY IN TOUCH</h2>
+            <p> Get updates in sales, specials and more</p>
+            <form>
+                <div class="mb-1">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <button type="submit" class="btn panda-btn-buy-now">Submit</button>
+              </form>
+          </div>
+        </section>
+        <!-- subscribe section ends  -->
     </main>
+    <footer class="mt-5 text-center">
+        <p> 2022 . Panda commere. All rights reserved. Berlin, Germany</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
