--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                   <div class="card border border-0 shadow-lg h-100">
-                    <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                    <img src="/images/shoes/shoe-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Supply 350</h5>
                       <h2>$160</h2>
